# order-matching-engine

./: .gitignore  CMakeLists.txt  README.md  gen_commands.py  instruments.cfg  visualize.py
include/: ArrayBitMapLocator.hpp  Command.hpp  CoroutineWorker.hpp  InstrumentConfig.hpp  InstrumentContext.hpp  MatchingCore.hpp  OrderBook.hpp  OrderIndex.hpp  OrderPool.hpp  PriceLevel.hpp  QueueAwaitable.hpp  RingBuffer.hpp  Task.hpp  ThreadPool.hpp  Threading.hpp  TradeEvent.hpp  Types.hpp  WorkerThread.hpp
report/: report_b_w1.html  report_b_w2.html  report_b_w4.html  report_w1.html  report_w2.html  report_w4.html
src/: ArrayBitMapLocator.cpp  CoroutineWorker.cpp  InstrumentConfig.cpp  InstrumentContext.cpp  MatchingCore.cpp  QueueAwaitable.cpp  ThreadPool.cpp  Threading.cpp  WorkerThread.cpp  main.cpp  sim_runner.cpp
tests/: TestFramework.hpp  TestMain.cpp
